package org.yearup.sandwichshop;

public enum ExtraChoice {EXTRA_CHEESE, EXTRA_MEAT}
