package org.yearup.sandwichshop;

public interface OrderItems {
    double getPrice();
    String getDetails();

}
