package org.yearup.sandwichshop;

public enum ToppingType {MEAT,CHEESE,REGULAR}
